--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
   <div class="content">
     <mat-form-field class="field">
-      <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film"  [formControl]="searchControl" />
+      <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film" value="" (input)="onSearchTitleChange($event)" name="title" />
       <mat-icon matPrefix  aria-hidden="true">search</mat-icon>
     </mat-form-field>
 
