--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -21,12 +21,12 @@
     <mat-card class="item" role="listitem" aria-labelledby="Films items" *ngFor="let film of films | slice: startIndex: endIndex" [style.background-color]="coloreCard" [style.color]="coloreTextCard">
       <mat-card-header>
         <mat-card-title class="title" aria-label="Film title">
-          {{film.film.title}}
+          <a class="link_details" (click)="openDetails(film)">{{film.film.title}} </a>
         </mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
-        <p><strong>Anno:</strong> {{ film.film.release_year }}</p>
+        <p><strong>Anno di uscita:</strong> {{ film.film.release_year }}</p>
         <p><strong>Lingua:</strong> {{ film.language.name }}</p>
         <p><strong>Genere:</strong> {{ film.category.name }}</p>
         <p><strong>Descrizione:</strong> <br>{{ film.film.description }}</p>
