--- a/rent_film/rent_film_app/src/app/film-details/film-details.component.css
+++ b/rent_film/rent_film_app/src/app/film-details/film-details.component.css
@@ -1,45 +1,50 @@
 .dialog-window {
-  display: block;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: Calibri;
   font-size: 20px;
+  height: 100%;
 }
 
 
-.title {
-  display: block;
-}
-
-.title h2{
-  margin-bottom: -10px;
-
-  padding: 40px;
-  padding-top: 50px;
-  font-family:serif;
-  font-size: 50px;
-}
-
-.dialog-content{
-  padding: 40px;
-  padding-left:70px ;
+.list{
+  margin-left: 10px;
 }
 
 
-mat-card-actions{
-  justify-content: flex-end;
-  padding-bottom: 0;
+.close{
+  float: right;
+
 }
 
-.content-rent{
+
+.title-dialog{
+  margin: 20px;
+  font-family: serif;
+  font-size: 30px;
+}
+
+
+
+.rent-button{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+
 }
 
 .button-rent{
   font-size: large;
-  padding: 5%;
+  margin-bottom: 2px;
+}
+
+@media screen and (max-width: 768px) {
+  .title-dialog{
+    font-size: 20px;
+  }
+
+  .button-rent {
+    font-size: medium;
+  }
 }
