--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
@@ -13,8 +13,8 @@
 #scroll-up
 {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 40px;
+  left: 10px;
   text-align: center;
 }
 
@@ -103,6 +103,13 @@ mat-card-content a{
   }
   .title {
     font-size: 16px;
+  }
+
+
+
+  .back-to-top-button{
+    size:5px;
+    padding: 10px;
   }
 }
 
