--- a/rent_film/rent_film_app/src/app/film-details/film-details.component.css
+++ b/rent_film/rent_film_app/src/app/film-details/film-details.component.css
@@ -25,8 +25,6 @@
   font-size: 30px;
 }
 
-
-
 .rent-button{
   display: flex;
   justify-content: center;
@@ -40,6 +38,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .dialog-window {
+    overflow-y: auto;
+  }
   .title-dialog{
     font-size: 20px;
   }
