--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.css
@@ -5,6 +5,11 @@
   border: 1px solid black;
 }
 
+.custom-dialog-class {
+  background-color: #f1f1f1;
+  /* Altri stili personalizzati del dialog */
+}
+
 .spacer {
   flex: 0.1 1 auto;
 }
