--- a/rent_film/rent_film_app/src/app/film-details/film-details.component.html
+++ b/rent_film/rent_film_app/src/app/film-details/film-details.component.html
@@ -1,16 +1,16 @@
-<div class="dialog-window" role="dialog" title="Dialog window for film details" aria-labelledby="dialog-title" [ngClass]="currentTheme">
-  <div class="title"  [style.background-color]="coloreCard" [style.color]="coloreTextCard">
+<mat-dialog-content [attr.aria-labelledby]="filmTitle" class="dialog-window" tabindex="-1" role="dialog" aria-label="Dialog" [ngClass]="currentTheme" >
 
+  <mat-dialog-actions align="end">
+    <button mat-button class="close" aria-label="Close dialog" role="button" title="Button for close dialog" (click)="closeDialog()" >
+      <mat-icon aria-hidden="true">close</mat-icon>
+      Close
+    </button>
+  </mat-dialog-actions>
 
-      <button mat-button class="close" aria-label="Close dialog" role="button" title="Button for close dialog" (click)="closeDialog()" >
-        <mat-icon>
-          <span>close</span>
-        </mat-icon>
-        Close
-      </button>
-    <br>
-    <h1 class="title-dialog" mat-dialog-title aria-describedby="dialog-description" id="dialog-title">{{ film.film.title }}</h1>
-  </div>
+  <br>
+
+  <h2 mat-dialog-title id="{{ film.film.title }}" class="title-dialog" tabindex="0" aria-describedby="dialog-description" >{{ film.film.title }}</h2>
+
 
   <mat-list class="list" id="dialog-description" role="list">
     <mat-list-item role="listitem"  >
@@ -40,20 +40,15 @@
     </mat-list-item>
   </mat-list>
 
-  <div class="dialog-content"  id="dialog-description">
-
-
-      <div class="rent-button" >
-        <button mat-button aria-label="Rent film" role="button" title="Button for rent film"  [style.color]="coloreTextCard"  [disabled]="!isStoreAvailable" (click)="rent_page(film, stores)">
-          {{ film.film.rental_rate}}
-          <mat-icon>
-            <span >euro</span>
-          </mat-icon>
-          NOLEGGIA
-        </button>
-      </div>
+  <div class="rent-button" >
+    <button mat-button aria-label="Rent film" role="button" title="Button for rent film"  [style.color]="coloreTextCard"  [disabled]="!isStoreAvailable" (click)="rent_page(film, stores)">
+      {{ film.film.rental_rate}}
+      <mat-icon>
+        <span >euro</span>
+      </mat-icon>
+      NOLEGGIA
+    </button>
   </div>
-
-</div>
+</mat-dialog-content>
 
 
