--- a/rent_film/rent_film_app/src/app/rent/rent.component.css
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.css
@@ -63,6 +63,10 @@ button[type="submit"] {
   }
 }
 
+.mat-option:focus {
+  outline: 2px solid #2E90FF; /* Esempio: evidenzia l'opzione selezionata con un bordo blu */
+}
+
 @media (max-width: 400px) {
   .card-title {
     font-size: 18px;
