--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -6,20 +6,15 @@
     </mat-card-title>
     <mat-card-content >
       <p><label id="label_data"><strong>When do you want to start your rental?</strong></label></p>
-        <mat-radio-group aria-labelledby="label_data"
-          class="data-radio-group"
-          [(ngModel)]="data_selected">
-          <mat-radio-button class="radio" *ngFor="let data of data_group" [value]="data">{{data}}</mat-radio-button>
+        <mat-radio-group  aria-labelledby="radio-group-data" role="radiogroup" class="data-radio-group" [(ngModel)]="data_selected">
+          <mat-radio-button class="radio-group-data" role="radio" *ngFor="let data of data_group" [value]="data">{{data}}</mat-radio-button>
         </mat-radio-group>
         <br>
         <br>
 
         <p><label id="label_store"><strong>Select a store:</strong> </label></p>
-        <mat-radio-group
-          aria-labelledby="label_store"
-          class="store-radio-group"
-          [(ngModel)]="store_selected">
-          <mat-radio-button class="store-radio-button" *ngFor="let store of stores" [value]="store.store.store_id"  [disabled]="!store.num_film">
+        <mat-radio-group aria-labelledby="radio-group-stores" role="radiogroup" class="store-radio-group" [(ngModel)]="store_selected" >
+          <mat-radio-button class="radio-group-stores" role="radio" *ngFor="let store of stores" [value]="store.store.store_id"  [disabled]="!store.num_film">
             {{store.address.address}}
           </mat-radio-button>
         </mat-radio-group>
