--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="content">
   <mat-form-field class="field">
-    <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film" value="" (input)="onSearchTitleChange($event)" name="title" />
-    <mat-icon matPrefix  aria-hidden="true">search</mat-icon>
+    <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film" (input)="onSearchTitleChange($event)" />
+    <mat-icon matPrefix aria-hidden="true">search</mat-icon>
   </mat-form-field>
 
   <span class="spacer"></span>
 
   <mat-form-field class="field">
-    <mat-select  aria-label="Filtra per categoria" placeholder="Filtra per categoria">
-      <mat-option *ngFor="let category of categories" [value]="category" (click)="filterByCategory(category)">
+    <mat-select  aria-label="Filter by category" placeholder="Filter by category" >
+      <mat-option *ngFor="let category of categories" role="option" [value]="category" (click)="filterByCategory(category)">
         {{category.name}}
       </mat-option>
     </mat-select>
@@ -33,7 +33,7 @@
     </mat-card-content>
 
     <mat-card-actions align="end">
-      <button mat-button aria-labelledby="Rent button" role="button" title="Button for rent film" [style.color]="coloreTextCard" (click)="rent_page(film)">
+      <button mat-button aria-label="Rent button" role="button" title="Button for rent film" [style.color]="coloreTextCard" (click)="rent_page(film)">
         {{ film.film.rental_rate }}
         <mat-icon>
           <span aria-hidden="true">euro</span>
