--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,7 +1,7 @@
 <div class="login" [ngClass]="currentTheme" fxLayout="column" fxLayoutAlign="center center">
   <mat-card  [style.background-color]="coloreCard" [style.color]="coloreTextCard" >
     <mat-card-title class="card-title">
-      <strong>{{film.film.title}}</strong>
+      <strong tabindex="0">{{film.film.title}}</strong>
       <br>
     </mat-card-title>
     <mat-card-content >
