--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,11 +1,12 @@
 <div class="search">
-  <div class="serach-content"
-    [style.background-color]="coloreCard" >
-    <div><p><strong>Spesa totale:</strong> {{ totalAmount}}
+  <div class="serach-content" [style.background-color]="coloreCard">
+    <div tabindex="0">
+      <p aria-label="Spesa totale">
+        <strong>Spesa totale:</strong> {{ totalAmount }}
+      </p>
     </div>
   </div>
 </div>
-
 
 
 <div class="button-row" >
