--- a/rent_film/rent_film_app/src/app/login/login.component.html
+++ b/rent_film/rent_film_app/src/app/login/login.component.html
@@ -19,10 +19,12 @@
               </mat-form-field>
 
               <div class="div_button">
-                <button mat-raised-button color="primary" type="submit" role="button" title="Clicca qui per effettuare il login" aria-labelledby="login button">Login</button>
+                <button mat-raised-button color="primary" type="submit" role="button" title="Clicca qui per effettuare il login" aria-describedby="error-message">Login</button>
                 <button mat-raised-button color="primary" [routerLink]="['/registration']" role="button" title="Clicca qui per registrare un nuovo utente" aria-labelledby="register button">Registrati</button>
               </div>
-              <p *ngIf="error" class="error-message">{{ error }}</p>
+              <ul *ngIf="errors.length > 0" class="error-message" id="error-message">
+                <li *ngFor="let error of errors">{{ error }}</li>
+            </ul>
 
             </form>
 
